[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "cyberpunk-radio-extractor"
version = "0.0.0"
description = "Extract Cyberpunk 2077 radios (and jingles) as MP3 files with album art."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/cyberpunk-radio-extractor"
"Issue Tracker" = "https://github.com/domdfcoding/cyberpunk-radio-extractor/issues"
"Source Code" = "https://github.com/domdfcoding/cyberpunk-radio-extractor"

[project.scripts]
radio-extractor = '"cyberpunk_radio_extractor.__main__:main"'

[tool.whey]
base-classifiers = []
python-versions = [ "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "cyberpunk_radio_extractor"

[tool.importcheck]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dep_checker.name_mapping]
pillow = "PIL"
